# blender-mcp

./: README.md  TERMS_AND_CONDITIONS.md  main.py  pyproject.toml
