[project]
name = "blender-mcp"
version = "0.1.0"
description = "MCP server for Blender integration via socket communication"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
blender-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "addon.py",
    ".DS_Store",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
